--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
+  <link href="../node_modules/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylesheet" />
+  <script src="../node_modules/ng2-toastr/bundles/ng2-toastr.min.js"></script>
+
 </head>
 
 <body>
